--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/creationix/simple-tcp/issues"
+  },
+  "devDependencies": {
+    "simple-stream-helpers": "*"
   }
 }
